# ART_Oscilloscope-

./: .gitattributes  .gitignore  AGENTS.md  TODO.md  VIRTUAL_ENV.md  activate_env.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start_mock.bat
artdaq/: _lib.py  artdaq_main.py
artdaq/_task_modules/: di_channel_collection.py  do_channel_collection.py  read_functions.py
config/: 20260519-scope_config.json  20260617-config.json  20260618-config.json  default_config.json
docs/: ARCHITECTURE.md  CHECKLIST.md  EVENTBUS_SPEC.md  FEEDBACK_DESIGN.md  FEEDBACK_DESIGN_v0.5.md  FEEDBACK_SPEC.md  FEEDBACK_TODO.md  README.md  ROADMAP.md  TECH_STACK.md
docs/spec_doc/: eventbus-decoupling.md
feedback_example/: DDS_slow_feedback_rpc.py  RTMQ_rpyc_server.py  ad9910_rpyc_server.py  ad9910_rpyc_service.py
scope/: __init__.py  main.py
scope/acquisition/: __init__.py
scope/config/: __init__.py  settings.py
scope/hardware/: __init__.py  art_device.py  device.py  simulator.py  stm32_device.py
scope/io/: __init__.py  feedback_command.py  feedback_command_worker.py  feedback_manager.py  feedback_worker.py
scope/model/: __init__.py  analysis_result.py  enums.py
scope/processing/: __init__.py  fft.py  (+4 more)
stm32/: diag_serial.py  diag_timing.py  serial_test.py
tests/: test_art_device.py  test_channel_panel_source.py  test_config_manager.py  test_feedback_command_worker.py  test_feedback_manager.py  test_feedback_slots.py  test_feedback_worker.py  test_measurement_config_worker.py  test_phase0.py  test_pid_controller.py  test_processing.py
(+42 files in other folders)
