[project]
name = "digital-scope"
version = "0.1.0"
description = "基于 ART USB 采集卡的多通道数字示波器"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
ui = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "qasync>=0.27",
]
feedback = [
    "rpyc>=5.3",
    "pyserial>=3.5",
    "pymodbus>=3.6",
    "httpx>=0.25",
]
hardware = [
    "pyusb>=1.3",
]
analysis = [
    "scipy>=1.10",
]
storage = [
    "h5py>=3.8",
]
all = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "qasync>=0.27",
    "rpyc>=5.3",
    "pyserial>=3.5",
    "pymodbus>=3.6",
    "httpx>=0.25",
    "pyusb>=1.3",
    "scipy>=1.10",
    "h5py>=3.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
